--- a/drivers/cpufreq/Kconfig
+++ b/drivers/cpufreq/Kconfig
@@ -89,10 +89,10 @@ config CPU_FREQ_DEFAULT_GOV_ONDEMAND
 	  driver. Fallback governor will be the performance governor.
 	  
 config CPU_FREQ_DEFAULT_GOV_ZZMOOVE
-  bool "zzmoove"
-  select CPU_FREQ_GOV_ZZMOOVE
-  select CPU_FREQ_GOV_PERFORMANCE
-  ---help---
+    bool "zzmoove"
+    select CPU_FREQ_GOV_ZZMOOVE
+    select CPU_FREQ_GOV_PERFORMANCE
+    help
     Use the CPUFreq governor 'zzmoove' as default, using predefined
     frequency lookup tables and optimized scaling triggers instead of
     % frequency steps to get smooth up/downscaling dependant on CPU load.
@@ -192,12 +192,13 @@ config CPU_FREQ_GOV_ONDEMAND
 config CPU_FREQ_GOV_ZZMOOVE
   tristate "'zzmoove' cpufreq governor"
   depends on CPU_FREQ
-  ---help---
+  help
     'zzmoove' - based on cpufreq_conservative, using predefined
     frequency lookup tables and optimized scaling triggers instead of
     % frequency steps to get smooth up/downscaling dependant on CPU load.
 
     If in doubt, say N.
+
 
 config CPU_FREQ_GOV_ONDEMAND_FLEXRATE
 	bool "flexrate interface for 'ondemand' cpufreq policy governor"
