--- a/arch/arm/configs/cyanogenmod_i9100_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100_defconfig
@@ -403,8 +403,8 @@ CONFIG_EXYNOS4210_1400MHZ_SUPPORT=y
 # Support dynamic CPU Hotplug
 #
 CONFIG_EXYNOS_PM_HOTPLUG=y
-CONFIG_STAND_ALONE_POLICY=y
-# CONFIG_LEGACY_HOTPLUG_POLICY is not set
+# CONFIG_STAND_ALONE_POLICY is not set
+CONFIG_LEGACY_HOTPLUG_POLICY=y
 # CONFIG_WITH_DVFS_POLICY is not set
 # CONFIG_DVFS_NR_RUNNING_POLICY is not set
 # CONFIG_NR_RUNNING_POLICY is not set
@@ -3045,14 +3045,14 @@ CONFIG_CRYPTO_RNG2=y
 CONFIG_CRYPTO_PCOMP2=y
 CONFIG_CRYPTO_MANAGER=y
 CONFIG_CRYPTO_MANAGER2=y
-CONFIG_CRYPTO_MANAGER_TESTS=y
+# CONFIG_CRYPTO_MANAGER_TESTS is not set
 CONFIG_CRYPTO_GF128MUL=y
 CONFIG_CRYPTO_NULL=y
 # CONFIG_CRYPTO_PCRYPT is not set
 CONFIG_CRYPTO_WORKQUEUE=y
 CONFIG_CRYPTO_CRYPTD=y
 CONFIG_CRYPTO_AUTHENC=y
-CONFIG_CRYPTO_TEST=y
+# CONFIG_CRYPTO_TEST is not set
 
 #
 # Authenticated Encryption with Associated Data
