cpu freq based on lcd freq

--- a/arch/arm/configs/cyanogenmod_i9100_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100_defconfig
@@ -3172,3 +3172,5 @@ CONFIG_FRANDOM=m
 CONFIG_CPU_UNDERVOLTING=y
 CONFIG_GPU_CLOCK_CONTROL=y
 CONFIG_DYNAMIC_FSYNC=y
+CONFIG_LCD_FREQ_SWITCH_ACCOUNTING=y
+CONFIG_CPU_FREQ_LCD_FREQ_DFS=y
