--- a/arch/arm/configs/cyanogenmod_i9100_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100_defconfig
@@ -182,6 +182,7 @@ CONFIG_IOSCHED_NOOP=y
 CONFIG_IOSCHED_DEADLINE=y
 CONFIG_IOSCHED_CFQ=y
 CONFIG_IOSCHED_BFQ=y
+CONFIG_CGROUP_BFQIO=y
 CONFIG_IOSCHED_ROW=y
 CONFIG_IOSCHED_SIO=y
 CONFIG_IOSCHED_ZEN=y
@@ -667,7 +668,7 @@ CONFIG_BOUNCE=y
 CONFIG_VIRT_TO_BUS=y
 # CONFIG_KSM is not set
 CONFIG_DEFAULT_MMAP_MIN_ADDR=4096
-# CONFIG_CLEANCACHE is not set
+CONFIG_CLEANCACHE=y
 CONFIG_CMA=y
 # CONFIG_CMA_DEVELOPEMENT is not set
 CONFIG_CMA_BEST_FIT=y
@@ -771,6 +772,7 @@ CONFIG_EARLYSUSPEND=y
 # CONFIG_NO_USER_SPACE_SCREEN_ACCESS_CONTROL is not set
 # CONFIG_CONSOLE_EARLYSUSPEND is not set
 CONFIG_FB_EARLYSUSPEND=y
+# CONFIG_HIBERNATION is not set
 CONFIG_PM_SLEEP=y
 CONFIG_PM_SLEEP_SMP=y
 CONFIG_PM_RUNTIME=y
@@ -2089,6 +2091,7 @@ CONFIG_MALI_OSMEM_ONLY=y
 # CONFIG_VIDEO_MALI400MP_DEBUG is not set
 CONFIG_VIDEO_MALI400MP_DVFS=y
 CONFIG_VIDEO_UMP=y
+CONFIG_MALI_CONTROL=y
 # CONFIG_UMP_R3P1_LSI is not set
 # CONFIG_UMP_DED_ONLY is not set
 CONFIG_UMP_OSMEM_ONLY=y
@@ -2673,6 +2676,9 @@ CONFIG_ANDROID_LOW_MEMORY_KILLER=y
 # CONFIG_IIO is not set
 # CONFIG_XVMALLOC is not set
 CONFIG_ZRAM=y
+# CONFIG_ZRAM_DEBUG is not set
+CONFIG_ZRAM_FOR_ANDROID=y
+CONFIG_ZCACHE=y
 # CONFIG_FB_SM7XX is not set
 # CONFIG_LIRC_STAGING is not set
 # CONFIG_EASYCAP is not set
