add stweaks support to stock cyanogenmod initramfs

--- a/arch/arm/configs/cyanogenmod_i9100_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100_defconfig
@@ -95,7 +95,7 @@ CONFIG_RT_GROUP_SCHED=y
 # CONFIG_SYSFS_DEPRECATED is not set
 # CONFIG_RELAY is not set
 CONFIG_BLK_DEV_INITRD=y
-CONFIG_INITRAMFS_SOURCE="../initramfs3"
+CONFIG_INITRAMFS_SOURCE="/home/gustavo/kernel/usr/galaxys2_initramfs.list"
 CONFIG_INITRAMFS_ROOT_UID=0
 CONFIG_INITRAMFS_ROOT_GID=0
 CONFIG_RD_GZIP=y
@@ -887,6 +887,7 @@ CONFIG_NF_CONNTRACK_TFTP=y
 CONFIG_NF_CT_NETLINK=y
 CONFIG_NETFILTER_TPROXY=y
 CONFIG_NETFILTER_XTABLES=y
+CONFIG_SIPC_VER_5=y
 
 #
 # Xtables combined modules
