--- a/arch/arm/configs/cyanogenmod_i9100_defconfig
+++ b/arch/arm/configs/cyanogenmod_i9100_defconfig
@@ -127,7 +127,7 @@ CONFIG_TIMERFD=y
 CONFIG_EVENTFD=y
 CONFIG_SHMEM=y
 CONFIG_ASHMEM=y
-# CONFIG_AIO is not set
+CONFIG_AIO=y
 CONFIG_EMBEDDED=y
 CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_PERF_USE_VMALLOC=y
@@ -153,8 +153,6 @@ CONFIG_HAVE_DMA_CONTIGUOUS=y
 CONFIG_HAVE_REGS_AND_STACK_ACCESS_API=y
 CONFIG_HAVE_CLK=y
 CONFIG_HAVE_DMA_API_DEBUG=y
-# CONFIG_MMC_CPRM is not set
-# CONFIG_RPCSEC_GSS_KRB5 is not set
 
 #
 # GCOV-based kernel profiling
@@ -553,7 +551,6 @@ CONFIG_BT_MGMT=y
 # CONFIG_QC_MODEM_MDM9X15 is not set
 # CONFIG_MDM_HSIC_PM is not set
 # CONFIG_EMI_ERROR_RECOVERY is not set
-# CONFIG_SIM_DETECT is not set
 CONFIG_USB_CDFS_SUPPORT=y
 CONFIG_SAMSUNG_PRODUCT_SHIP=y
 # CONFIG_CORESIGHT_ETM is not set
